ajuste tamano de botones leer mas en bio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-[#F8F4E3] text-gray-800">
 
   <!-- Header -->
-  <header class="sticky top-0 z-50 bg-[#336699] px-6 py-4">
+  <header class="sticky top-0 z-50 bg-[#336699] px-6 py-4 ">
   <div class="max-w-6xl mx-auto flex justify-between items-center relative">
 
     <!-- Logo + Título -->
@@ -472,7 +472,7 @@ class="w-full py-12 px-4 bg-cover bg-center"
   <h2 class="text-center text-white text-3xl font-semibold mb-12">Team</h2>
 
   <!-- Grid del equipo -->
-  <div class="max-w-6xl mx-auto w-[80%] grid grid-cols-1 md:grid-cols-2 gap-10 text-white">
+  <div class="max-w-6xl mx-auto w-full md:w-[80%] grid grid-cols-1 md:grid-cols-2 gap-10 text-white">
 
     <!-- Tarjeta 1 -->
     <div class="flex items-start gap-4">
@@ -482,15 +482,15 @@ class="w-full py-12 px-4 bg-cover bg-center"
       </div>
       <!-- Info -->
       <div class="flex flex-col gap-2">
-        <h3 class="text-lg font-semibold">Diana Hernandez</h3>
-        <p class="text-sm">
+        <h3 class="text-lg md:text-xl font-semibold">Diana Hernandez</h3>
+        <p class="text-sm  md:text-xl">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
         <a 
           href="#about" 
-          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm md:text-base text-center px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
         >
-          Leer más
+          Leer más ...
         </a>
       </div>
     </div>
@@ -502,16 +502,16 @@ class="w-full py-12 px-4 bg-cover bg-center"
         Photo Jorge
       </div>
       <!-- Info -->
-      <div class="flex flex-col gap-2 items-end">
-        <h3 class="text-lg font-semibold">Jorge Brozicevich</h3>
-        <p class="text-sm">
+      <div class="flex flex-col gap-2 ">
+        <h3 class="text-lg md:text-xl font-semibold">Jorge Brozicevich</h3>
+        <p class="text-sm md:text-xl">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
         <a 
           href="#about" 
-          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm md:text-base  text-center font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
         >
-          Leer más
+          Leer más ...
         </a>
       </div>
     </div>
@@ -524,13 +524,13 @@ class="w-full py-12 px-4 bg-cover bg-center"
       </div>
       <!-- Info -->
       <div class="flex flex-col gap-2">
-        <h3 class="text-lg font-semibold">Fidel Ramirez Ortiz</h3>
-        <p class="text-sm">
+        <h3 class="text-lg md:text-xl font-semibold">Fidel Ramirez Ortiz</h3>
+        <p class="text-sm  md:text-xl">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
         <a 
           href="#about" 
-          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm md:text-base  text-center font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
         >
           Leer más
         </a>
