Ajuste de Menu y pagina adicionales

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
     <nav id="menu" class="absolute top-full left-0 w-full md:static md:w-auto md:flex md:space-x-6 bg-[#F8F4E3] md:bg-transparent text-[#336699] md:text-white px-6 py-4 md:p-0 hidden md:block shadow-md md:shadow-none z-10">
       <a href="index.html" class="block py-2 md:py-0 hover:underline">Inicio</a>
       <a href="about.html" class="block py-2 md:py-0 hover:underline">Sobre Nosotros</a>
-      <a href="team.html" class="block py-2 md:py-0 hover:underline">Equipo</a>
-      <a href="contact.html" class="block py-2 md:py-0 hover:underline">Contacto</a>
+      <a href="servicios.html" class="block py-2 md:py-0 hover:underline">Servicios</a>
+       <a href="team.html" class="block py-2 md:py-0 hover:underline">Equipo</a>
     </nav>
 
   </div>
@@ -51,7 +51,7 @@
 
     <!-- Título centrado -->
     <h1 class="text-3xl md:text-4xl font-bold text-center mb-12">
-      Servicios
+      Información de Contacto
     </h1>
 
     <!-- Sección de dos columnas en desktop / apilado en móvil -->
