--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
       <a href="index.html" class="block py-2 md:py-0 hover:underline">Inicio</a>
       <a href="about.html" class="block py-2 md:py-0 hover:underline">Sobre Nosotros</a>
       <a href="servicios.html" class="block py-2 md:py-0 hover:underline">Servicios</a>
-       <a href="team.html" class="block py-2 md:py-0 hover:underline">Equipo</a>
+       <a href="contact.html" class="block py-2 md:py-0 hover:underline">Equipo</a>
     </nav>
 
   </div>
@@ -51,7 +51,7 @@
 
     <!-- Título centrado -->
     <h1 class="text-3xl md:text-4xl font-bold text-center mb-12">
-      Servicios
+      Información del Equipo
     </h1>
 
     <!-- Sección de dos columnas en desktop / apilado en móvil -->
