--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
       <a href="index.html" class="block py-2 md:py-0 hover:underline">Inicio</a>
       <a href="about.html" class="block py-2 md:py-0 hover:underline">Sobre Nosotros</a>
       <a href="servicios.html" class="block py-2 md:py-0 hover:underline">Servicios</a>
-       <a href="contact.html" class="block py-2 md:py-0 hover:underline">Equipo</a>
+       <a href="contact.html" class="block py-2 md:py-0 hover:underline">Contacto</a>
     </nav>
 
   </div>
@@ -66,6 +66,7 @@
     </div>
     
   </main>
-
+ <!-- JS -->
+    <script src="js/main.js"></script>
 </body>
 </html>
