--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Menú de navegación -->
         <nav
           id="menu"
-          class="absolute top-full left-0 w-full md:static md:w-auto md:flex md:space-x-6 bg-[#F8F4E3] md:bg-transparent text-[#336699] md:text-white px-6 py-4 md:p-0 hidden md:block shadow-md md:shadow-none z-10"
+          class=" absolute top-full left-0 w-full md:static md:w-auto md:flex md:space-x-6 bg-[#F8F4E3] md:bg-transparent text-[#336699] md:text-white px-6 py-4 md:p-0 hidden md:block shadow-md md:shadow-none z-10"
         >
           <a href="about.html" class="block py-2 md:py-0 hover:underline"
             >Sobre Nosotros</a
@@ -91,6 +91,12 @@
           <a href="contact.html" class="block py-2 md:py-0 hover:underline"
             >Contacto</a
           >
+          <!-- Imagen decorativa visible solo en móvil -->
+          <img
+            src="images/svg/corner-deco.svg"
+            alt="Decoración inferior derecha"
+            class="block md:hidden absolute bottom-0 right-0 w-20 h-auto pointer-events-none"
+          />
         </nav>
       </div>
     </header>
@@ -610,25 +616,25 @@
     >
       <!-- Título -->
       <h1
-        class="text-3xl md:text-4xl font-bold text-center text-[#336699] mb-8 opacity-0 translate-y-4 scroll-animate fade-in-up delay-[100ms]"
+        class="text-3xl md:text-4xl font-bold text-center text-[#336699] mb-8 fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
       >
         Nuestro Equipo
       </h1>
 
       <!-- Imagen centrada -->
       <div
-        class="flex justify-center mb-6 opacity-0 translate-y-4 scroll-animate fade-in-up delay-[300ms]"
+        class="flex justify-center mb-6 fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
       >
         <img
           src="images/jpg/TeamBW.jpg"
           alt="Equipo terapéutico"
-          class="w-[90%] sm:w-[80%] md:w-[70%] lg:w-[60%] xl:w-[50%] h-auto rounded-xl shadow-md transition-all duration-500"
+          class="w-[90%] sm:w-[80%] md:w-[70%] lg:w-[60%] xl:w-[50%] h-auto rounded-xl shadow-md fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
         />
       </div>
 
       <!-- Párrafo explicativo -->
       <p
-        class="text-center text-lg md:text-xl text-[#336699] max-w-2xl mx-auto mb-8 opacity-0 translate-y-4 scroll-animate fade-in-up delay-[500ms]"
+        class="text-center text-lg md:text-xl text-[#336699] max-w-2xl mx-auto mb-8 fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
       >
         Conoce al gran equipo de terapeutas que están transformando vidas en
         EaBuenCamino con profesionalismo, calidez y vocación auténtica.
@@ -636,7 +642,7 @@
 
       <!-- Botón CTA -->
       <div
-        class="text-center opacity-0 translate-y-4 scroll-animate fade-in-up delay-[700ms]"
+        class="text-center opacity-0 translate-y-4 fade-in opacity-0 translate-y-4 transition-all duration-700 ease-out fade-on-scroll"
       >
         <a
           href="team.html"
