--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-[#F8F4E3] text-[#336699]">
     <!-- Header -->
-    <header class="sticky top-0 z-50 bg-[#78ACCF] px-6 py-4">
+    <header class="sticky top-0 z-50 bg-[#336699] px-6 py-4">
       <div class="max-w-6xl mx-auto flex justify-between items-center relative">
         <!-- Logo + Título con enlace -->
         <a
@@ -61,28 +61,51 @@
           </svg>
         </button>
 
-        <!-- Menú de navegación -->
+         <!-- Menú de navegación -->
         <nav
-          id="menu"
-          class="absolute top-full left-0 w-full md:static md:w-auto md:flex md:space-x-6 bg-[#F8F4E3] md:bg-transparent text-[#336699] md:text-white px-6 py-4 md:p-0 hidden md:block shadow-md md:shadow-none z-10"
+          id="custom-mobile-menu"
+          class="fixed inset-0 z-40 mt-32 mx-auto bg-[#F8F4E3] hidden md:hidden overflow-hidden animate-fade-in flex items-center justify-center"
         >
-          <a href="index.html" class="block py-2 md:py-0 hover:underline"
-            >Inicio</a
+          <!-- Cuadrícula de navegación -->
+          <div
+            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto"
           >
-          <a href="services.html" class="block py-2 md:py-0 hover:underline"
-            >Servicios</a
-          >
-          <a href="#team" class="block py-2 md:py-0 hover:underline">Equipo</a>
-          <a href="#contact" class="block py-2 md:py-0 hover:underline"
-            >Contacto</a
-          >
+            <!-- 1,1: Sobre Nosotros -->
+            <a
+              href="about.html"
+              class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
+            >
+              Sobre Nosotros
+              <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
+            </a>
 
-          <!-- Imagen decorativa visible solo en móvil -->
-          <img
-            src="images/svg/corner-deco.svg"
-            alt="Decoración inferior derecha"
-            class="block md:hidden absolute bottom-0 right-0 w-20 h-auto pointer-events-none"
-          />
+            <!-- 1,2: Servicios -->
+            <a
+              href="services.html"
+              class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
+            >
+              <div class="absolute left-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
+              Servicios
+            </a>
+
+            <!-- 2,1: Conócenos -->
+            <a
+              href="team.html"
+              class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
+            >
+              Conócenos
+              <div class="absolute right-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
+            </a>
+
+            <!-- 2,2: Contáctanos -->
+            <a
+              href="contact.html"
+              class="relative flex items-center justify-center text-lg md:text-lg bg-[#336699] text-white text-center font-semibold"
+            >
+              <div class="absolute left-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
+              Contáctanos
+            </a>
+          </div>
         </nav>
       </div>
     </header>
@@ -94,25 +117,40 @@
         Sobre EaBuenCamino
       </h1>
 
-      <!-- Sección de dos columnas en desktop / apilado en móvil -->
-      <div class="flex flex-col md:flex-row items-center justify-between gap-8">
+      <!-- Sección  -->
+      <div class="flex flex-col  items-center justify-between ">
         <!-- Imagen a la izquierda -->
-        <div class="w-full md:w-1/2 flex justify-center">
+        <div class="w-full  flex justify-center">
           <img
             src="images/jpg/about-image.jpg"
             alt="Sobre EaBuenCamino"
-            class="w-[80%] h-auto mx-auto custom-bottom-round shadow-lg fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out"
+            class="w-full h-auto mx-auto custom-bottom-round shadow-lg fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out"
           />
         </div>
 
         <!-- Párrafo a la derecha -->
-        <div class="w-full md:w-1/2 flex justify-center">
-          <p class="w-[80%] h-auto text-base md:text-lg leading-relaxed">
-            EaBuenCamino nace con la intención de brindar un acompañamiento
-            terapéutico empático, profesional y humano. Nuestro objetivo es
-            facilitar espacios donde las personas puedan reconectarse consigo
-            mismas, sanar heridas emocionales y encontrar nuevas perspectivas
-            para avanzar en su vida con equilibrio y propósito.
+        <div class="w-full py-4 flex justify-center">
+          <p class=" h-auto text-base md:text-lg leading-relaxed fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
+            En Ea, Buen Camino Counseling Services, entendemos que cada persona
+            es portadora de una historia única, tejida por sus experiencias, su
+            cultura y su identidad. Sabemos que en cada relato hay momentos de
+            fortaleza, resiliencia y desafíos, y nuestro compromiso es brindarle
+            un espacio seguro y acogedor donde pueda explorar su historia y
+            darle un nuevo significado. Como terapeutas bilingües y
+            biculturales, le ofrecemos la posibilidad de expresarse en el idioma
+            que le haga sentir más cómodo—ya sea en inglés, en español o en
+            ambos—porque creemos que las palabras tienen un poder especial
+            cuando se pronuncian desde el corazón. Nuestro enfoque terapéutico
+            está profundamente arraigado en la comprensión del trauma, la
+            equidad y la sensibilidad cultural. Reconocemos cómo las
+            experiencias de vida pueden moldear la forma en que nos vemos a
+            nosotros mismos, y queremos acompañarle en el proceso de identificar
+            y transformar aquellas narrativas que ya no reflejan su esencia. A
+            través de la terapia narrativa, caminaremos juntos hacia una versión
+            de su historia que honre su fortaleza, sus valores y su verdad. En
+            este espacio, su voz es escuchada, su historia es respetada y su
+            camino de sanación es suyo. Porque creemos que cada persona merece
+            sentirse empoderada y dueña de su propia transformación.
           </p>
         </div>
       </div>
