adicion de deccoracion a menu nav version movil

--- a/about.html
+++ b/about.html
@@ -61,11 +61,32 @@
           </svg>
         </button>
 
-         <!-- Menú de navegación -->
+        <!-- Menú de navegación -->
         <nav
           id="custom-mobile-menu"
           class="fixed inset-0 z-40 mt-32 mx-auto bg-[#F8F4E3] hidden md:hidden overflow-hidden animate-fade-in flex items-center justify-center"
         >
+          <!-- Esquinas decorativas -->
+          <img
+            src="images/png/corner-tl.png"
+            class="absolute top-0 left-0 w-6 h-6"
+            alt="Decoración esquina superior izquierda"
+          />
+          <img
+            src="images/png/corner-tr.png"
+            class="absolute top-0 right-0 w-6 h-6"
+            alt="Decoración esquina superior derecha"
+          />
+          <img
+            src="images/png/corner-bl.png"
+            class="absolute bottom-0 left-0 w-6 h-6"
+            alt="Decoración esquina inferior izquierda"
+          />
+          <img
+            src="images/png/corner-br.png"
+            class="absolute bottom-0 right-0 w-6 h-6"
+            alt="Decoración esquina inferior derecha"
+          />
           <!-- Cuadrícula de navegación -->
           <div
             class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto"
@@ -118,9 +139,9 @@
       </h1>
 
       <!-- Sección  -->
-      <div class="flex flex-col  items-center justify-between ">
+      <div class="flex flex-col items-center justify-between">
         <!-- Imagen a la izquierda -->
-        <div class="w-full  flex justify-center">
+        <div class="w-full flex justify-center">
           <img
             src="images/jpg/about-image.jpg"
             alt="Sobre EaBuenCamino"
@@ -130,7 +151,9 @@
 
         <!-- Párrafo a la derecha -->
         <div class="w-full py-4 flex justify-center">
-          <p class=" h-auto text-base md:text-lg leading-relaxed fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
+          <p
+            class="h-auto text-base md:text-lg leading-relaxed fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out"
+          >
             En Ea, Buen Camino Counseling Services, entendemos que cada persona
             es portadora de una historia única, tejida por sus experiencias, su
             cultura y su identidad. Sabemos que en cada relato hay momentos de
