--- a/services.html
+++ b/services.html
@@ -62,11 +62,32 @@
         </button>
 
         <!-- Menú de navegación -->
-         <!-- Menú de navegación -->
+        <!-- Menú de navegación -->
         <nav
           id="custom-mobile-menu"
           class="fixed inset-0 z-40 mt-32 mx-auto bg-[#F8F4E3] hidden md:hidden overflow-hidden animate-fade-in flex items-center justify-center"
         >
+          <!-- Esquinas decorativas -->
+          <img
+            src="images/png/corner-tl.png"
+            class="absolute top-0 left-0 w-6 h-6"
+            alt="Decoración esquina superior izquierda"
+          />
+          <img
+            src="images/png/corner-tr.png"
+            class="absolute top-0 right-0 w-6 h-6"
+            alt="Decoración esquina superior derecha"
+          />
+          <img
+            src="images/png/corner-bl.png"
+            class="absolute bottom-0 left-0 w-6 h-6"
+            alt="Decoración esquina inferior izquierda"
+          />
+          <img
+            src="images/png/corner-br.png"
+            class="absolute bottom-0 right-0 w-6 h-6"
+            alt="Decoración esquina inferior derecha"
+          />
           <!-- Cuadrícula de navegación -->
           <div
             class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto"
