--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
           />
           <!-- Cuadrícula de navegación -->
           <div
-            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto"
+            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto  gap-4"
           >
             <!-- 1,1: Sobre Nosotros -->
             <a
