Ajustes de nombres y paginas en menu nav para cada agina adicional

--- a/about.html
+++ b/about.html
@@ -93,10 +93,10 @@
           >
             <!-- 1,1: Sobre Nosotros -->
             <a
-              href="about.html"
+              href="index.html"
               class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
-              Sobre Nosotros
+              Inicio
               <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
             </a>
 
