--- a/contact.html
+++ b/contact.html
@@ -90,24 +90,24 @@
           />
           <!-- Cuadrícula de navegación -->
           <div
-            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto  gap-4"
+            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto gap-4"
           >
             <!-- 1,1: Sobre Nosotros -->
             <a
-              href="about.html"
+              href="index.html"
               class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
-              Sobre Nosotros
+              Inicio
               <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
             </a>
 
             <!-- 1,2: Servicios -->
             <a
-              href="services.html"
+              href="about.html"
               class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
               <div class="absolute left-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
-              Servicios
+              Sobre Nosotros
             </a>
 
             <!-- 2,1: Conócenos -->
@@ -115,7 +115,7 @@
               href="team.html"
               class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
-              Conócenos
+              Servicios
               <div class="absolute right-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
             </a>
 
@@ -125,7 +125,7 @@
               class="relative flex items-center justify-center text-lg md:text-lg bg-[#336699] text-white text-center font-semibold"
             >
               <div class="absolute left-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
-              Contáctanos
+              Conócenos
             </a>
           </div>
         </nav>
