--- a/team.html
+++ b/team.html
@@ -92,25 +92,25 @@
           >
             <!-- 1,1: Sobre Nosotros -->
             <a
-              href="about.html"
+              href="index.html"
               class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
-              Sobre Nosotros
+              Inicio
               <div class="absolute right-12 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
             </a>
 
             <!-- 1,2: Servicios -->
             <a
-              href="services.html"
+              href="about.html"
               class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
               <div class="absolute left-12 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
-              Servicios
+              Sobre Nosotros
             </a>
 
             <!-- 2,1: Conócenos -->
             <a
-              href="team.html"
+              href="services.html"
               class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
               Conócenos
