--- a/index.html
+++ b/index.html
@@ -86,33 +86,13 @@
         <!-- Menú de navegación para móviles -->
         <nav
           id="custom-mobile-menu"
-          class="fixed inset-0 z-40 mt-32 mx-auto bg-[#F8F4E3] md:hidden overflow-hidden animate-fade-in flex items-center justify-center"
+          class="fixed inset-0 z-40 mt-32 mx-auto bg-[#F8F4E3] hidden md:hidden overflow-hidden animate-fade-in flex items-center justify-center"
         >
           <!-- Esquinas decorativas -->
-          <img
-            src="images/png/corner-tl.png"
-            class="absolute top-0 left-0 w-6 h-6"
-            alt="Decoración esquina superior izquierda"
-          />
-          <img
-            src="images/png/corner-tr.png"
-            class="absolute top-0 right-0 w-6 h-6"
-            alt="Decoración esquina superior derecha"
-          />
-          <img
-            src="images/png/corner-bl.png"
-            class="absolute bottom-0 left-0 w-6 h-6"
-            alt="Decoración esquina inferior izquierda"
-          />
-          <img
-            src="images/png/corner-br.png"
-            class="absolute bottom-0 right-0 w-6 h-6"
-            alt="Decoración esquina inferior derecha"
-          />
 
           <!-- Cuadrícula de navegación -->
           <div
-            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto gap-4"
+            class="grid grid-cols-2 grid-rows-2 h-[80%] w-[80%] mx-auto ml-auto gap-2"
           >
             <!-- 1,1: Sobre Nosotros -->
             <a
@@ -120,7 +100,12 @@
               class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
               Sobre Nosotros
-              <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
+              <!-- <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div> -->
+              <img
+                src="images/png/corner-br.png"
+                class="absolute bottom-0 right-0 w-6 h-6"
+                alt="Decoración esquina inferior derecha"
+              />
             </a>
 
             <!-- 1,2: Servicios -->
@@ -128,17 +113,53 @@
               href="services.html"
               class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
-              <div class="absolute left-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
               Servicios
+              <!-- <div class="absolute left-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div> -->
+
+              <img
+                src="images/png/corner-bl.png"
+                class="absolute bottom-0 left-0 w-6 h-6"
+                alt="Decoración esquina inferior izquierda"
+              />
             </a>
 
             <!-- 2,1: Conócenos -->
             <a
               href="team.html"
-              class="relative flex items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
+              class="relative flex flex-col items-center justify-center bg-[#E3BE03] text-lg md:text-lg text-[#336699] text-center font-semibold"
             >
               Conócenos
-              <div class="absolute right-8 h-[15%] w-[2px] bg-[#F8F4E3]"></div>
+
+              <!-- Espacio de 12px + SVG -->
+              <div class="mt-3">
+                <svg
+                  width="40"
+                  height="25"
+                  viewBox="0 0 160 100"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  stroke="#F8F4E3"
+                  stroke-width="3"
+                  class="eyes-bounce"
+                >
+                  <!-- Ojo izquierdo -->
+                  <circle cx="40" cy="60" r="30" />
+                  <circle cx="40" cy="60" r="12" />
+                  <path d="M10 60 A40 40 0 0 1 70 60" />
+
+                  <!-- Ojo derecho -->
+                  <circle cx="120" cy="60" r="30" />
+                  <circle cx="120" cy="60" r="12" />
+                  <path d="M90 60 A40 40 0 0 1 150 60" />
+                </svg>
+              </div>
+
+              <!-- Decoración esquina -->
+              <img
+                src="images/png/corner-tr.png"
+                class="absolute top-0 right-0 w-6 h-6"
+                alt="Decoración esquina superior derecha"
+              />
             </a>
 
             <!-- 2,2: Contáctanos -->
@@ -146,8 +167,14 @@
               href="contact.html"
               class="relative flex items-center justify-center text-lg md:text-lg bg-[#336699] text-white text-center font-semibold"
             >
-              <div class="absolute left-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div>
               Contáctanos
+              <!-- <div class="absolute left-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div> -->
+
+              <img
+                src="images/png/corner-tl.png"
+                class="absolute top-0 left-0 w-6 h-6"
+                alt="Decoración esquina superior izquierda"
+              />
             </a>
           </div>
         </nav>
