--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                 >
                   <g class="flip">
                     <!-- Círculo (cabeza de la llave) -->
-                    <circle cx="40" cy="50" r="30" fill="#F8F4E3" />
+                    <circle cx="40" cy="50" r="30" fill="#336699" />
                     <!-- Cuerpo de la llave -->
-                    <rect x="70" y="45" width="90" height="10" fill="#F8F4E3" />
+                    <rect x="70" y="45" width="90" height="10" fill="#336699" />
                     <!-- Dientes de la llave -->
-                    <rect x="110" y="55" width="6" height="10" fill="#F8F4E3" />
-                    <rect x="150" y="55" width="6" height="20" fill="#F8F4E3" />
+                    <rect x="110" y="55" width="6" height="10" fill="#336699" />
+                    <rect x="150" y="55" width="6" height="20" fill="#336699" />
                   </g>
                 </svg>
               </div>
