ajuste de svg menu nav para movil version

--- a/index.html
+++ b/index.html
@@ -97,10 +97,25 @@
             <!-- 1,1: Sobre Nosotros -->
             <a
               href="about.html"
-              class="relative flex items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
+              class="relative flex flex-col items-center justify-center bg-[#336699] text-white text-center text-lg md:text-lg font-semibold"
             >
               Sobre Nosotros
-              <!-- <div class="absolute right-8 h-[30%] w-[2px] bg-[#F8F4E3]"></div> -->
+              <div class="mt-3">
+                <svg
+                  width="25"
+                  height="25"
+                  viewBox="-5 -5 42 39"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g class="heart-group">
+                    <path
+                      class="heart"
+                      d="M23.6,0c-3.4,0-6.3,2.1-7.6,5.1C14.7,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,4.4,3.4,8.1,10.2,13.9
+      c2.6,2.1,5.2,4.2,5.2,4.2s2.6-2.1,5.2-4.2C28.6,16.5,32,12.8,32,8.4C32,3.8,28.2,0,23.6,0z"
+                    />
+                  </g>
+                </svg>
+              </div>
               <img
                 src="images/png/corner-br.png"
                 class="absolute bottom-0 right-0 w-6 h-6"
@@ -159,7 +174,6 @@
                     <!-- Máscara animada para los ojos -->
                     <mask id="eyeMask">
                       <rect width="160" height="100" fill="white" />
-                      <!-- Párpado animado -->
                       <rect
                         id="lid"
                         x="0"
@@ -220,6 +234,24 @@
                     stroke="#336699"
                     stroke-width="3"
                   />
+
+                  <!-- Pupilas fijas animadas (movimiento horizontal) -->
+                  <circle cy="60" r="5" fill="#336699">
+                    <animate
+                      attributeName="cx"
+                      values="37;43;37"
+                      dur="4s"
+                      repeatCount="indefinite"
+                    />
+                  </circle>
+                  <circle cy="60" r="5" fill="#336699">
+                    <animate
+                      attributeName="cx"
+                      values="117;123;117"
+                      dur="4s"
+                      repeatCount="indefinite"
+                    />
+                  </circle>
                 </svg>
               </div>
 
@@ -239,26 +271,27 @@
               Contáctanos
               <div class="mt-3">
                 <svg
-                  width="40"
-                  height="25"
-                  viewBox="0 0 200 120"
+                  width="20"
+                  height="30"
+                  viewBox="0 0 60 120"
                   xmlns="http://www.w3.org/2000/svg"
+                  class="wiggle-card"
                 >
-                  <g class="wiggle">
-                    <!-- Contorno de la tarjeta -->
+                  <g>
+                    <!-- Contorno -->
                     <rect
-                      x="10"
-                      y="10"
-                      width="180"
-                      height="100"
-                      rx="16"
-                      ry="16"
+                      x="5"
+                      y="5"
+                      width="50"
+                      height="110"
+                      rx="8"
+                      ry="8"
                       fill="none"
                       stroke="#F8F4E3"
-                      stroke-width="6"
+                      stroke-width="4"
                     />
-                    <!-- Círculo decorativo -->
-                    <circle cx="160" cy="60" r="10" fill="#F8F4E3" />
+                    <!-- Círculo inferior -->
+                    <circle cx="30" cy="100" r="5" fill="#F8F4E3" />
                   </g>
                 </svg>
               </div>
