--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                       class="heart"
                       d="M23.6,0c-3.4,0-6.3,2.1-7.6,5.1C14.7,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,4.4,3.4,8.1,10.2,13.9
       c2.6,2.1,5.2,4.2,5.2,4.2s2.6-2.1,5.2-4.2C28.6,16.5,32,12.8,32,8.4C32,3.8,28.2,0,23.6,0z"
+      style="fill:#F8F4E3;"
                     />
                   </g>
                 </svg>
@@ -236,7 +237,7 @@
                   />
 
                   <!-- Pupilas fijas animadas (movimiento horizontal) -->
-                  <circle cy="60" r="5" fill="#336699">
+                  <circle cy="60" r="15" fill="#336699">
                     <animate
                       attributeName="cx"
                       values="37;43;37"
@@ -244,7 +245,7 @@
                       repeatCount="indefinite"
                     />
                   </circle>
-                  <circle cy="60" r="5" fill="#336699">
+                  <circle cy="60" r="15" fill="#336699">
                     <animate
                       attributeName="cx"
                       values="117;123;117"
@@ -286,12 +287,14 @@
                       height="110"
                       rx="8"
                       ry="8"
-                      fill="none"
-                      stroke="#F8F4E3"
+                      fill="#F8F4E3"
+                      stroke="#F
+                      
+                      E3"
                       stroke-width="4"
                     />
                     <!-- Círculo inferior -->
-                    <circle cx="30" cy="100" r="5" fill="#F8F4E3" />
+                    <circle cx="30" cy="100" r="10" fill="#336699" />
                   </g>
                 </svg>
               </div>
